Fix for footer cutting off smaller pages (mobile)

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -68,7 +68,7 @@ footer p {
 }
 
 .bottomPad {
-    padding-bottom: 90px;
+    padding-bottom: 95px;
 }
 
 .card {
